--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ section{
     padding-left: 10%;
 }
 .divwrite{
-    margin-right: 10%;
+    
     padding-left: 50px;
 }
 .divwidth img{
@@ -43,4 +43,25 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.downwidth{
+    width: 50%;
+    text-align: justify;
+}
+.downwidth img{
+    width: 72%;
+    padding-left: 50px;
+}
+.downwright{
+    margin-right: 7%;
+    padding-left: 50px;
+}
+.downlink{
+    padding: 10px 40px;
+    border-radius: 2px;
+    text-decoration: none;
+    background-image: linear-gradient(yellow, orange);
+    color: white;
+    font-weight: 700;
 }
