--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@ body{
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
 }
-h1{
-    font-size: xx-large;
-}
 .firsth1{
     padding-top: 80px;
+    font-size: xx-large;
+}
+.lasth1{
+    padding-left: 10%;
+    padding-bottom: 2%;
 }
 .me{
     color: orange;
+    style="padding-left: 10px;
 }
 .about{
     text-align: justify;
@@ -17,6 +20,9 @@ h1{
     font-size: large;
 }
 section{
+    margin-bottom: 120px;
+}
+.flexball{
     display: flex;
 }
 
@@ -25,7 +31,6 @@ section{
     padding-left: 10%;
 }
 .divwrite{
-    
     padding-left: 50px;
 }
 .divwidth img{
@@ -44,7 +49,16 @@ section{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
-
+.mid-banner{
+    background-repeat: no-repeat;
+    background-image: url(images/dream-bg.png);
+    background-position: right;
+}
+.last-banner{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
 .downwidth{
     width: 50%;
     text-align: justify;
@@ -64,4 +78,13 @@ section{
     background-image: linear-gradient(yellow, orange);
     color: white;
     font-weight: 700;
+}
+
+.lastwidth{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-right: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 50px gray;
 }
